# vicepython-ffi-typer

./: .gitignore  README.md  pyproject.toml  quarantining-cli-frameworks.md
docs/: API_REFERENCE.md  CONCEPTS.md  GETTING_STARTED.md  USER_GUIDE.md  how-to-add-help-text.md  how-to-build-multi-command-apps.md  how-to-create-error-types.md  how-to-exit-with-custom-codes.md  how-to-handle-file-paths.md  how-to-handle-optional-parameters.md  how-to-require-subcommands.md  how-to-test-failing-commands.md  how-to-test-successful-commands.md  how-to-use-boolean-flags.md  how-to-use-typer-features.md
plans/: force-multi-command-behaviour.md
src/vicepython_ffi_typer/: __init__.py  _internal.py  run.py  typed_typer.py
tests/: test_command_result.py  test_integration.py  test_require_subcommand.py  test_run_boundary.py
