[project]
name = "vicepython-ffi-typer"
version = "0.1.0"
description = "Typed CLI framework façade with Result semantics for VicePython"
requires-python = ">=3.12"
dependencies = [
    "vicepython-core>=0.2.0",
    "typer>=0.9.0",
]
authors = []

[tool.uv.sources]
vicepython-core = { git = "https://github.com/Atalanta/vicepython-core.git" }

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
